Fixed bottom html overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
+html {
+  height: calc(100% + 265px);
+}
+
 body {
   margin: 0;
+  height: auto;
 }
 
 #wrapper {
@@ -166,6 +171,7 @@ Main Container
   top: 265px;
   left: 0;
   z-index: 20;
+  display: block;
 }
 
 .row {
@@ -267,4 +273,12 @@ Footer
 }
 
 
-
+#clear-bottom {
+  position: fixed;
+  bottom: 0;
+  background-color: inherit;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
